src/test/ui/cross-file-errors/main.stderr
error: expected expression, found `_`
  --> $DIR/underscore.rs:18:9
   |
LL |         _
   |         ^ expected expression
   | 
  ::: $DIR/main.rs:15:5
   |
LL |     underscore!();
   |     -------------- in this macro invocation

